# ocrust

./: Cargo.toml
src/: args.rs  endpoint.rs  functions.rs  main.rs  papi.rs  server.rs
src/endpoint/: mod.rs
src/foo/: mod.rs
