[package]
name = "ocrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
ureq = { version = "2.4.0", features = ["json", "charset"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
httpmock = "0.6"
